--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,46 +1,30 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;700&display=swap");
 /* GENERAL */
-.font-small {
-  font-weight: 300;
-}
-
-.font-regular {
-  font-weight: 400;
-}
-
-.font-medium {
-  font-weight: 500;
-}
-
-.font-bold {
-  font-weight: 700;
-}
-
 /* MAIN */
-.maininicio {
+.bodyinicio {
   background: #2f1b31;
   background: -webkit-gradient(linear, left bottom, left top, color-stop(25%, #2f1b31), color-stop(50%, #861234), color-stop(70%, #2f1b31));
   background: linear-gradient(0deg, #2f1b31 25%, #861234 50%, #2f1b31 70%);
 }
 
-.mainmiembros {
+.bodymiembros {
   background: #201839;
 }
 
-.mainhistoria {
+.bodyhistoria {
   background: #2b2f38;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(35%, #2b2f38), to(#82838b));
   background: linear-gradient(180deg, #2b2f38 35%, #82838b 100%);
 }
 
-.maingaleria {
+.bodygaleria {
   background: #fffffd;
   background: -webkit-gradient(linear, left bottom, left top, from(#fffffd), color-stop(60%, #111110));
   background: linear-gradient(0deg, #fffffd 0%, #111110 60%);
 }
 
-.mainunirse {
+.bodyunirse {
   background: #860010;
   background: -webkit-gradient(linear, left bottom, left top, from(#860010), color-stop(40%, black));
   background: linear-gradient(0deg, #860010 0%, black 40%);
