--- a/css/estilos.css
+++ b/css/estilos.css
@@ -497,7 +497,14 @@ nav .navlinks .navlinks__list .active {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 30vh;
+  margin-bottom: 20vh;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 #historia .historia__block--title {
@@ -512,7 +519,6 @@ nav .navlinks .navlinks__list .active {
 }
 
 #historia .historia__block1 {
-  margin: auto;
   width: 30%;
   padding: 30px;
   background: #2c2e34;
@@ -526,7 +532,6 @@ nav .navlinks .navlinks__list .active {
 }
 
 #historia .historia__block2 {
-  margin: auto;
   width: 30%;
   padding: 30px;
   background: #2c2e34;
@@ -540,7 +545,6 @@ nav .navlinks .navlinks__list .active {
 }
 
 #historia .historia__block3 {
-  margin: auto;
   width: 30%;
   padding: 30px;
   background: #2c2e34;
@@ -551,6 +555,11 @@ nav .navlinks .navlinks__list .active {
 #historia .historia__block3 .historia__block--text3 {
   color: #e7e8e9;
   font-size: 1.4em;
+}
+
+#carrousel {
+  background: #2b2f38;
+  margin-bottom: 30px;
 }
 
 /* GALERIA */
@@ -1096,6 +1105,59 @@ footer .footercontent .footercontent__socials .footercontent__icons:hover {
     border: 6px solid #71163b36;
     border-radius: 60px;
   }
+  .backgroundunirse #form {
+    width: 520px;
+    margin: 0px;
+  }
+  .backgroundunirse #form .form__container {
+    display: block;
+  }
+  .backgroundunirse #form .form__container .form__block1 {
+    padding-right: 9px;
+  }
+  .backgroundunirse {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .backgroundunirse #form {
+    width: 730px;
+  }
+  #historia {
+    margin-bottom: 10vh;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #historia .historia__block1 {
+    width: 90%;
+    margin: 30 auto 10 auto;
+  }
+  #historia .historia__block2 {
+    width: 90%;
+    margin: 30 auto 10 auto;
+  }
+  #historia .historia__block3 {
+    width: 90%;
+    margin: 30 auto 10 auto;
+    padding: 40px;
+  }
+  p {
+    margin-bottom: 0rem;
+  }
+  .backgroundGaleria .containergaleria .containergaleria__img {
+    width: 530px;
+  }
+  .titlegaleria .titlegaleria__text {
+    font-size: 3.5em;
+  }
+  .backgroundGaleria .containergaleria {
+    width: 100%;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 992px) {
@@ -1346,6 +1408,41 @@ footer .footercontent .footercontent__socials .footercontent__icons:hover {
     border: 6px solid #71163b36;
     border-radius: 60px;
   }
+  .form__block1--controls {
+    width: 90%;
+  }
+  .form__block1 {
+    padding-right: 0px;
+  }
+  .backgroundunirse #form {
+    width: 730px;
+  }
+  #historia {
+    margin-bottom: 10vh;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #historia .historia__block1 {
+    width: 90%;
+    margin: 30 auto 10 auto;
+  }
+  #historia .historia__block2 {
+    width: 90%;
+    margin: 30 auto 10 auto;
+  }
+  #historia .historia__block3 {
+    width: 90%;
+    margin: 30 auto 10 auto;
+    padding: 40px;
+  }
+  p {
+    margin-bottom: 0rem;
+  }
+  .backgroundGaleria .containergaleria .containergaleria__img {
+    width: 680px;
+  }
 }
 
 @media (min-width: 992px) and (max-width: 1200px) {
@@ -1370,7 +1467,7 @@ footer .footercontent .footercontent__socials .footercontent__icons:hover {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    margin-right: 100px;
+    margin-right: 200px;
   }
   nav .logo .logo__center {
     max-width: 90px;
@@ -1596,6 +1693,21 @@ footer .footercontent .footercontent__socials .footercontent__icons:hover {
     width: 600px;
     border: 6px solid #71163b36;
     border-radius: 60px;
+  }
+  #historia .historia__block1 {
+    width: 360px;
+  }
+  #historia .historia__block2 {
+    width: 360px;
+  }
+  #historia .historia__block3 {
+    width: 360px;
+  }
+  p {
+    margin-bottom: 0rem;
+  }
+  .backgroundGaleria .containergaleria .containergaleria__img {
+    width: 510px;
   }
 }
 /*# sourceMappingURL=estilos.css.map */
