--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,5 @@
 $title:'Raleway', sans-serif;
-$cursor: pointer;
+$cursor: default;
 $transform: uppercase;
 $colortext:#e7e8e9;
 $sizetitle: 2.5em;
